benefits left side spacing fixed
Former-commit-id: a7645be081fe6c162002c8b992f8d2d908ecb077 [formerly 26763970547cb2182241fd6b4a7bca78296cfe78]
Former-commit-id: 617f4fabcbe313d1848d3e0e45caccb93baa978d

--- a/src/styles/Home/benefits.module.scss
+++ b/src/styles/Home/benefits.module.scss
@@ -11,7 +11,7 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    padding: 2rem;
+    padding: 5% 0 0 7%;
     .heading {
       font-size: 2rem;
       font-weight: 700;
